--- a/Pizzaria von Dovah/MainWindow.xaml
+++ b/Pizzaria von Dovah/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pizzaria_von_Dovah"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="Pizzaria von Dovah" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
     <Grid>
 
