Dumb mistake fixes, more to be fixed, added drinks to the menu

--- a/Pizzaria von Dovah/Cart.xaml
+++ b/Pizzaria von Dovah/Cart.xaml
@@ -10,9 +10,10 @@
 
     <Grid>
         <TextBlock Text="Cart" FontSize="30" HorizontalAlignment="Center"/>
+        
         <DataGrid Margin="50, 70, 50, 50" ItemsSource="{Binding pizza_orders}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Pizza" Binding="{Binding Path=pizza_orders}"/>
+                <DataGridTextColumn Header="Pizza" Binding="{Binding}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
