--- a/Pizzaria von Dovah/Main_Menu.xaml
+++ b/Pizzaria von Dovah/Main_Menu.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:Pizzaria_von_Dovah"
         mc:Ignorable="d"
         Title="Main Menu" Height="675" Width="500"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
+    
     <Grid>
         <TextBlock x:Name="main_menu_header" Text="Pizzaria von Dovah" FontSize="45" FontWeight="Heavy" HorizontalAlignment="Center" Margin="0, 10, 0, 0"/>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Height="30" Margin="0, 100, 0, 0">
