--- a/Pizzaria von Dovah/Cart.xaml
+++ b/Pizzaria von Dovah/Cart.xaml
@@ -11,10 +11,10 @@
     <Grid>
         <TextBlock Text="Cart" FontSize="30" HorizontalAlignment="Center"/>
         
-        <DataGrid Margin="50, 70, 50, 50" ItemsSource="{Binding pizza_orders}" AutoGenerateColumns="False">
+        <DataGrid Margin="50, 70, 50, 50" ItemsSource="{Binding Source=pizza_orders}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Pizza" Binding="{Binding pizza_name}"/>
-                <DataGridTextColumn Header="Price" Binding="{Binding pizza_price}"/>
+                <DataGridTextColumn Header="Pizza" Binding="{Binding pizza_name, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Header="Price" Binding="{Binding pizza_price, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
